2008-11-19  Simon Kallweit  <simon.kallweit@intefo.ch>

	* tests/flash2.c: Fixed a few warnings.

2008-11-17  Jonathan Larmour  <jifl@eCosCentric.com>

	* Merge from flash_v2 branch:
	
 2004-12-02  Bart Veer  <bartv@ecoscentric.com>

	* src/synth.c: explicitly include <cyg/io/flash_dev.h> rather than
	just defining _FLASH_PRIVATE_
	* tests/flash2.c (cyg_user_start): update as per the v2 testcase

 2004-11-22  Bart Veer  <bartv@ecoscentric.com>

	* cdl/flash_synth.cdl: fix testcase definitions

 2004-08-03  Andrew Lunn  <andrew.lunn@ascom.ch>

	* cdl/flash_synth.cdl: Indicate we need the legacy device API.
	* cdl/flash_synth.cdl: 
	* tests/flash2.c: Added a second test case for the new API.

2005-08-02  Andrew Lunn  <andrew.lunn@ascom.ch>

	* tests/flash1.c (cyg_user_start): Fix a compiler warning about
	signedness of pointers.

2005-07-30  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/synth.c (flash_hwr_init): Cast to keep the compiler happy.

2005-03-27  Andrew Lunn  <andrew.lunn@ascom.ch>

	* tests/flash1.c: gcc 3.x does not like string continuing
	over lines with the " open.
	
2004-12-15  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/synth.c: Moved cyg_hal_sys_mmap into the HAL.

2003-11-20  Jani Monoses <jani@iv.ro>
	
	* tests/flash1.c: Update flash_init() call to reflect
	new prototype.
	
2002-01-23  Jonathan Larmour  <jlarmour@redhat.com>

	* cdl/flash_synth.cdl: Add CYGMEM_FLASH_SYNTH_BASE to allow
	imposition of base address.
	Add CYGSEM_FLASH_SYNTH_FILE_WRITEBACK to allow changes to be
	reflected in the underlying file.
	* src/synth.c (flash_hwr_init): Implement CYGMEM_FLASH_SYNTH_BASE and
	CYGSEM_FLASH_SYNTH_FILE_WRITEBACK using appropriate args to mmap().
	Include <string.h> to avoid warning.

2002-01-11  Jonathan Larmour  <jlarmour@redhat.com>

	* src/synth.c (flash_hwr_init): Initialize to 0xff if the file
	needs creating.
	* cdl/flash_synth.cdl: requires errno codes.

2002-01-08  Jonathan Larmour  <jlarmour@redhat.com>