@@ -1,3 +1,7 @@
+2008-12-18  Simon Kallweit  <simon.kallweit@intefo.ch>
+
+	* src/synth.c: Fixed error check of mmap call.
+
 2008-11-28  Sergei Gavrikov  <sergei.gavrikov@gmail.com>
 
 	* tests/flash[23].c: Fixed copy'n'paste typos in a naming: flash1 ->
